--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
                 </nav>
                     <ul class="contacts list">
                         <li class="item">
-                        <a href="mailto:info@devstudio.com" class="email">
-                        <span>
+                        <a href="mailto:info@devstudio.com" class="contact-link email">
+                        <span class="icon-link">
                             <svg class="icon-envelope" width="16px" height="12px">
                                 <use href="./images/sprite.svg#icon-envelope"></use>
                             </svg>
@@ -32,8 +32,8 @@
                     info@devstudio.com</a>
                     </li>
                         <li class="item">
-                        <a href="tel:+380961111111" class="tel">
-                        <span>
+                        <a href="tel:+380961111111" class="contact-link tel">
+                        <span class="icon-link">
                             <svg class="icon-smartphone" width="10px" height="16px">
                                 <use href="./images/sprite.svg#icon-smartphone"></use>
                             </svg>
@@ -58,7 +58,13 @@
                 <ul class="examples-works">
                     <li class="examples-posters">
                         <a class="reference-example" href="/">
+                            <div class="reference-overlay-animated">
                             <img src="./images/img-7.jpg" alt="Пример вебсайта технокряк" width="370" height="294">
+                                <div class="overlay-text-animated">
+                                    <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                         <div class="border">
                             <h2 class="examples-description">Технокряк</h2>
                             <p class="type-work">Веб-сайт</p>
@@ -67,7 +73,13 @@
                     </li>
                     <li class="examples-posters">
                         <a class="reference-example" href="/">
+                            <div class="reference-overlay-animated">
                             <img src="./images/img-8.jpg" alt="Игра баскетбол" width="370" height="294">
+                             <div class="overlay-text-animated">
+                                    <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                         <div class="border">
                             <h2 class="examples-description">Постер New Orlean vs Golden Star</h2>
                             <p class="type-work">Дизайн</p>
@@ -76,7 +88,13 @@
                     </li>
                     <li class="examples-posters">
                         <a class="reference-example" href="/">
+                            <div class="reference-overlay-animated">
                             <img src="./images/img-9.jpg" alt="Банер ресторана Seafood" width="370" height="294">
+                             <div class="overlay-text-animated">
+                                    <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                         <div class="border">
                             <h2 class="examples-description">Ресторан Seafood</h2>
                             <p class="type-work">Приложение</p>
@@ -85,7 +103,13 @@
                     </li>
                     <li class="examples-posters">
                         <a class="reference-example" href="/">
+                            <div class="reference-overlay-animated">
                             <img src="./images/img-10.jpg" alt="Наушники на изображении" width="370" height="294">
+                             <div class="overlay-text-animated">
+                                    <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                         <div class="border">
                             <h2 class="examples-description">Проект Prime</h2>
                             <p class="type-work">Маркетинг</p>
@@ -94,7 +118,13 @@
                     </li>
                     <li class="examples-posters">
                         <a class="reference-example" href="/">
+                            <div class="reference-overlay-animated">
                             <img src="./images/img-11.jpg" alt="Несколько коробок" width="370" height="294">
+                             <div class="overlay-text-animated">
+                                    <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                         <div class="border">
                             <h2 class="examples-description">Проект Boxes</h2>
                             <p class="type-work">Приложение</p>
@@ -103,7 +133,13 @@
                     </li>
                     <li class="examples-posters">
                         <a class="reference-example" href="/">
+                            <div class="reference-overlay-animated">
                             <img src="./images/img-12.jpg" alt="Изображение монитора" width="370" height="294">
+                             <div class="overlay-text-animated">
+                                    <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                         <div class="border">
                             <h2 class="examples-description">Inspiration has no Borders</h2>
                             <p class="type-work">Веб-сайт</p>
@@ -112,7 +148,13 @@
                     </li>
                     <li class="examples-posters">
                         <a class="reference-example" href="/">
+                            <div class="reference-overlay-animated">
                             <img src="./images/img-13.jpg" alt="Журнал" width="370" height="294">
+                             <div class="overlay-text-animated">
+                                    <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                         <div class="border">
                             <h2 class="examples-description">Издание Limited Edition</h2>
                             <p class="type-work">Дизайн</p>
@@ -121,7 +163,13 @@
                     </li>
                     <li class="examples-posters">
                         <a class="reference-example" href="/">
+                            <div class="reference-overlay-animated">
                             <img src="./images/img-14.jpg" alt="Лейбл" width="370" height="294">
+                             <div class="overlay-text-animated">
+                                    <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                         <div class="border">
                             <h2 class="examples-description">Проект LAB</h2>
                             <p class="type-work">Маркетинг</p>
@@ -130,7 +178,13 @@
                     </li>
                     <li class="examples-posters">
                         <a class="reference-example" href="/">
+                            <div class="reference-overlay-animated">
                             <img src="./images/img-15.jpg" alt="Изображение ноутбука" width="370" height="294">
+                             <div class="overlay-text-animated">
+                                    <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                            </div>
                         <div class="border">
                             <h2 class="examples-description">Growing Business</h2>
                             <p class="type-work">Приложение</p>
