--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
             <div class="overlay">
                 <div class="container">
                     <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
-                    <button type="button" class="banner-button">Заказать услугу</button>
+                    <button type="button" class="banner-button" data-modal-open>Заказать услугу</button>
+                    <div class="backdrop is-hidden" data-modal>
+                        <div class="modal">
+                            <button class="modal-button" data-modal-close>
+                                <svg class="icon-close">
+                                    <use href="./images/sprite.svg#icon-close" width="30px" height="30px"></use>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
                 </section>
@@ -91,9 +100,24 @@
                 <div class="container">
                     <h2 class="section-title">Чем мы занимаемся</h2>
                     <ul class="examples list">
-                        <li class="examples-item"><img src="./images/img.jpg" alt="Первое фото фиолетовое" width="370" height="294"></li>
-                        <li class="examples-item"><img src="./images/img-1.jpg" alt="Второе фото с телефоном" width="370" height="294"></li>
-                        <li class="examples-item"><img src="./images/img-2.jpg" alt="Третье фото приложение" width="370" height="294"></li>
+                        <li class="examples-item">
+                            <img src="./images/img.jpg" alt="Первое фото фиолетовое" width="370" height="294">
+                            <div class="examples-overlay">
+                                <p class="overlay-example-text">Десктопные приложения</p>
+                            </div>
+                        </li>
+                        <li class="examples-item">
+                            <img src="./images/img-1.jpg" alt="Второе фото с телефоном" width="370" height="294">
+                            <div class="examples-overlay">
+                                <p class="overlay-example-text">Мобильные приложения</p>
+                            </div>
+                        </li>
+                        <li class="examples-item">
+                            <img src="./images/img-2.jpg" alt="Третье фото приложение" width="370" height="294">
+                            <div class="examples-overlay">
+                                <p class="overlay-example-text">Дизайнерские решения</p>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </section>
@@ -318,5 +342,6 @@
             </div>
         </div>
     </footer>
+<script src="./js/modal.js"></script>
 </body>
 </html>
