--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Шапка сайта -->
     <header class="header">
-            <div class="container">
+            <div class="container header">
                     <nav class="navigation">
                         <a href="index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
                         <ul class="navigation-links list">
