--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <div class="backdrop is-hidden" data-modal>
                         <div class="modal">
                             <button class="modal-button" data-modal-close>
-                                <svg class="icon-close">
-                                    <use href="./images/sprite.svg#icon-close" width="30px" height="30px"></use>
+                                <svg class="icon-close" width="18px" height="18px">
+                                    <use href="./images/sprite.svg#icon-close"></use>
                                 </svg>
                             </button>
                         </div>
